# cloudflared-operator

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  mise.toml
docker/: build.sh
src/: controller.rs  crdgen.rs  lib.rs  main.rs
src/ext_cr/: mod.rs
src/ext_cr/dnsendpoint/: v1alpha1.rs
src/ext_cr/servicemonitor/: v1.rs
yaml/: bundle.yaml  cfdtunnels.cloudflared-operator.vrtx.sh.yaml  simple-tunnel.yaml
yaml/dev/: kustomization.yaml
yaml/kustomize/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
