[package]
name = "cloudflared-operator"
version = "0.0.1"
edition = "2024"
default-run = "operator"

[[bin]]
name = "operator"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "operator"
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
cloudflare = { version = "0.14.0", default-features = false, features = [
  "rustls-tls",
] }
futures = "0.3.32"
k8s-openapi = { version = "0.27.1", features = ["v1_35", "schemars"] }
kube = { version = "3.1.0", default-features = false, features = [
  "client",
  "derive",
  "runtime",
  "rustls-tls",
  "unstable-runtime",
] }
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.1", default-features = false, features = [
  "http-listener",
] }
metrics-process = "2.4.3"
mimalloc = "0.1.48"
rand = "0.10.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.18.0", features = ["base64"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
